--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 babel==2.17.0
+backrefs==5.8
 blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -15,38 +16,37 @@ idna==3.10
 importlib_metadata==8.6.1
 irene-sankey==1.1.4
 itsdangerous==2.2.0
-Jinja2==3.1.5
+Jinja2==3.1.6
 Markdown==3.7
 MarkupSafe==3.0.2
 mergedeep==1.3.4
 mkdocs==1.6.1
 mkdocs-get-deps==0.2.0
-mkdocs-material==9.6.4
+mkdocs-material==9.6.9
 mkdocs-material-extensions==1.3.1
 nest-asyncio==1.6.0
-numpy==2.2.3
+numpy==2.2.4
 packaging==24.2
 paginate==0.5.7
 pandas==2.2.3
 pathspec==0.12.1
-platformdirs==4.3.6
+platformdirs==4.3.7
 plotly==5.24.1
 Pygments==2.19.1
 pymdown-extensions==10.14.3
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2025.1
+python-dotenv==1.1.0
+pytz==2025.2
 PyYAML==6.0.2
 pyyaml_env_tag==0.1
-regex==2024.11.6
 requests==2.32.3
 retrying==1.3.4
-setuptools==75.8.0
+setuptools==78.0.2
 six==1.17.0
 tenacity==9.0.0
 towncrier==24.8.0
 typing_extensions==4.12.2
-tzdata==2025.1
+tzdata==2025.2
 urllib3==2.3.0
 watchdog==6.0.0
 Werkzeug==3.0.6
